--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -3,12 +3,15 @@
   description: Validate branch name contains a JIRA key; use --auth user:pass for JIRA credentials; use --host to specify JIRA server hostname
   entry: check-jira-issue
   language: script
+  stages:
+    - pre-commit
 - id: prepend-jira-issue
   name: Prepend JIRA issue key
   description: Prepends JIRA issue key to commit msg (if missing)
   entry: prepend-jira-issue
   language: script
-  stages: [prepare-commit-msg]
+  stages:
+    - prepare-commit-msg
 - id: checkstyle
   name: Checkstyle
   description: Checkstyle
@@ -16,3 +19,5 @@
   language: script
   pass_filenames: true
   types: [text]
+  stages:
+    - pre-commit
