--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -3,6 +3,7 @@
   description: Validate branch name contains a JIRA key; use --auth user:pass for JIRA credentials; use --host to specify JIRA server hostname
   entry: check-jira-issue
   language: script
+  always_run: true
   stages:
     - commit
 - id: prepend-jira-issue
@@ -10,8 +11,9 @@
   description: Prepends JIRA issue key to commit msg (if missing)
   entry: prepend-jira-issue
   language: script
+  always_run: true
   stages:
-    - prepare-commit-msg
+    - commit-msg
 - id: checkstyle
   name: Checkstyle
   description: Checkstyle
