--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,11 +1,10 @@
 - id: check-jira-issue
   name: Validate branch name contains a JIRA key
-  description: Validate branch name contains a JIRA key; use --auth user:pass for JIRA credentials; use --host to specify JIRA server hostname
+  description: Validate branch name contains a JIRA key; use --username and --password  for JIRA credentials; use --host to specify JIRA server hostname
   entry: check-jira-issue
   language: script
+  pass_filenames: false
   always_run: true
-  stages:
-    - commit
 - id: prepend-jira-issue
   name: Prepend JIRA issue key
   description: Prepends JIRA issue key to commit msg (if missing)
@@ -21,5 +20,3 @@
   language: script
   pass_filenames: true
   types: [text]
-  stages:
-    - commit
