Add support for detekt

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -20,3 +20,10 @@
   language: script
   pass_filenames: true
   types: [text]
+- id: detekt
+  name: detekt
+  description: detekt
+  entry: detekt
+  language: script
+  pass_filenames: true
+  types: [text]
