Pin to current latest version with option to specify your own version

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -25,5 +25,6 @@
   description: detekt
   entry: detekt
   language: script
-  pass_filenames: true
-  types: [text]
+  pass_filenames: false
+  files: \.kt$
+  require_serial: true
