Add support for detekt (#2)
* Add support for detekt
* Pin to current latest version with option to specify your own version

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -20,3 +20,11 @@
   language: script
   pass_filenames: true
   types: [text]
+- id: detekt
+  name: detekt
+  description: detekt
+  entry: detekt
+  language: script
+  pass_filenames: false
+  files: \.kt$
+  require_serial: true
